# RobotFun

./: README.md
docs/notes/: GPUTests_Notes.txt  intentlist.txt  ollama_langchain.txt  qa.txt
mech/cpuwaterblock/: README.md  baterblock.FCStd  copper_base.FCStd  mountingplate.FCStd  mountingplate.step
src/: coder.py  helpers.py  intent.py  question.py  sysmon.py  train_intent.py  wwwserver.py
src/data/: intents.json
src/experiments/chatbot1/: chatbot1.py
src/experiments/cluster/: startprovider  startrequester  stopprovider
src/experiments/coder1/: pong_code_33b.py  pong_codebooga_34b.py  pong_codellama_70b.py  pong_deepseek_67b_chat.py  pong_gemini.py  pong_gpt4.py  pong_gpt4_promptE.py  pong_miqu_120b.py  pong_phind.py  pong_wizard.py
src/experiments/diffusers/: ddpm_cifar10_32.py  dreamlike_photoreal_2_0.py  lykon_absolute-reality-1-6525.py  playground_v2_5_1024px_aesthetic.py  runwayml_stable_diffusion_v1_5.py  sdxl_lightning.py  txt2vid.py
src/experiments/grpc/: CMakeLists.txt  README.md  adder.grpc.pb.cc  adder.grpc.pb.h  adder.pb.cc  adder.pb.h  adder.proto  adder_pb2.py  adder_pb2_grpc.py  client.cpp  grpcclient.py  grpcserver.py  notes.txt
src/experiments/intent1/: isquestion1.py  isquestion2.py
src/experiments/intent2/: intents.json  intenttest.py  intenttrain.py
src/experiments/panel/: app.py
src/experiments/pythoncodegeneration1/: pythoncode.py
src/experiments/webservercpp/: CMakeLists.txt  server.cpp
src/experiments/webservercpp/www/: index.html
src/www/: footer.html  gpt.css  gpt.html  gpt.js  header.html  index.html  sysmon.html
(+14 files in other folders)
